# pheasant

./: .gitignore  MANIFEST  MANIFEST.in  README.md  README.txt  main.py  pyproject.toml  requirements.txt  setup.py  setup.sh
docs/: Makefile  conf.py  gomath.const.rst  gomath.rst  index.html  index.rst  make.bat  pheasant.test.rst
docs/_build/doctrees/: environment.pickle  gomath.const.doctree  gomath.doctree  gomath.test.doctree  index.doctree  pheasant.const.doctree  pheasant.doctree  pheasant.test.doctree
docs/_build/html/: .buildinfo  genindex.html  gomath.const.html  gomath.html  gomath.test.html  index.html  objects.inv  pheasant.const.html  pheasant.html  pheasant.test.html  py-modindex.html  search.html  (+1 more)
pheasant/: algebra.py  algorithm.py  calculus.py  clean.sh  cleanpyc.sh  database.py  geometry.py  grptheory.py  linear.py  logic.py  mkdocs.sh  network.py  numtheory.py  plotly.py  run_server.sh  sample.txt  settheory.py  statistics.py  util.py
pheasant/const/: defstat.py
pheasant/examples/: drawer.html  drawer.js
pheasant/flask/: app.py
pheasant/https_test/: main.py
pheasant/public/: drawer.css  drawer.js  index.html  main.py  run_server.sh  server.py
pheasant/test/: conftest.py  test_ai.py  test_algebra.py  test_algorithm.py  test_calculus.py  test_database.py  test_geometry.py  test_grptheory.py  test_image.py  test_linear.py  test_logic.py  test_network.py  test_numtheory.py  test_pyotp.py  test_pytest.py  test_pythonlang.py  test_settheory.py  test_statistics.py  test_thread.py  test_util.py  unittest.sh  working_test_database.py
(+37 files in other folders)
